--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^16.5.0",
     "fastify": "^5.3.3",
     "fastify-cors": "^6.1.0",
+    "jsonwebtoken": "^9.0.2",
     "node-cron": "^4.0.5",
     "openai": "^4.28.0",
     "pino": "^8.16.2",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.18",
     "@types/node-cron": "^3.0.11",
     "@types/puppeteer": "^7.0.4",
