--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   "license": "ISC",
   "packageManager": "pnpm@10.9.0",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.832.0",
+    "@aws-sdk/s3-request-presigner": "^3.832.0",
     "@fastify/cors": "^11.0.1",
+    "@fastify/multipart": "^9.0.3",
     "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.6.2",
     "cheerio": "^1.0.0-rc.12",
@@ -28,6 +31,7 @@
     "fastify": "^5.3.3",
     "fastify-cors": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.1",
     "node-cron": "^4.0.5",
     "openai": "^4.28.0",
     "pino": "^8.16.2",
