--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "ts-node-dev --respawn src/index.ts",
     "build": "tsc",
     "lint": "eslint src/ --ext .ts",
-    "test": "jest"
+    "test": "jest",
+    "husky": "husky install"
   },
   "keywords": [
     "news",
@@ -34,6 +35,7 @@
     "multer": "^2.0.1",
     "node-cron": "^4.0.5",
     "openai": "^4.28.0",
+    "pdf-parse": "^1.1.1",
     "pino": "^8.16.2",
     "pino-pretty": "^10.3.0",
     "puppeteer": "^24.8.2"
@@ -43,6 +45,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.18",
     "@types/node-cron": "^3.0.11",
+    "@types/pdf-parse": "^1.1.5",
     "@types/puppeteer": "^7.0.4",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
@@ -52,6 +55,7 @@
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "husky": "^9.1.7"
   }
 }
